// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filters read - no criteria 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "folder": "INBOX",
        "name": "MOVE",
      },
      Object {
        "emails": "toto.test@bluemind.net",
        "keepCopy": false,
        "name": "REDIRECT",
      },
      Object {
        "name": "MARK_AS_READ",
      },
    ],
    "active": true,
    "criteria": Array [],
    "editable": true,
    "exceptions": Array [],
    "index": 0,
    "manageable": true,
    "name": "N/A",
    "terminal": true,
  },
]
`;

exports[`filters read 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "folder": "INBOX",
        "name": "MOVE",
      },
      Object {
        "emails": "toto.test@bluemind.net",
        "keepCopy": false,
        "name": "REDIRECT",
      },
      Object {
        "name": "MARK_AS_READ",
      },
    ],
    "active": true,
    "criteria": Array [
      Object {
        "exception": false,
        "matcher": "EQUALS",
        "target": Object {
          "name": undefined,
          "type": "from.email",
        },
        "value": "Toto",
      },
      Object {
        "exception": false,
        "matcher": "EQUALS",
        "target": Object {
          "name": undefined,
          "type": "to.email",
        },
        "value": "Tata",
      },
      Object {
        "exception": false,
        "matcher": "CONTAINS",
        "target": Object {
          "name": undefined,
          "type": "subject",
        },
        "value": "Toto&Tata",
      },
      Object {
        "exception": false,
        "matcher": "MATCHES",
        "target": Object {
          "name": "X-My-Header",
          "type": "headers",
        },
        "value": "head-bang",
      },
    ],
    "editable": true,
    "exceptions": Array [
      Object {
        "exception": true,
        "matcher": "CONTAINS",
        "target": Object {
          "name": undefined,
          "type": "part.content",
        },
        "value": "un gros mot",
      },
    ],
    "index": 0,
    "manageable": true,
    "name": "N/A",
    "terminal": true,
  },
]
`;

exports[`filters write - no criteria 1`] = `
Object {
  "actions": Array [
    Object {
      "name": "MARK_AS_DELETED",
    },
    Object {
      "emails": Array [
        "toto.test@bluemind.net",
      ],
      "keepCopy": false,
      "name": "REDIRECT",
    },
  ],
  "active": true,
  "client": "bluemind",
  "conditions": Array [],
  "deferred": false,
  "name": "MyFilter",
  "stop": true,
  "trigger": "IN",
  "type": "GENERIC",
}
`;

exports[`filters write 1`] = `
Object {
  "actions": Array [
    Object {
      "name": "MARK_AS_DELETED",
    },
    Object {
      "emails": Array [
        "toto.test@bluemind.net",
      ],
      "keepCopy": false,
      "name": "REDIRECT",
    },
  ],
  "active": true,
  "client": "bluemind",
  "conditions": Array [
    Object {
      "conditions": Array [],
      "filter": Object {
        "fields": Array [
          "to.email",
          "cc.email",
        ],
        "operator": "EQUALS",
        "values": Array [
          "Tata",
        ],
      },
      "negate": false,
      "operator": "AND",
    },
    Object {
      "conditions": Array [],
      "filter": Object {
        "fields": Array [
          "headers.X-Machin-Chouette",
        ],
        "operator": "EQUALS",
        "values": Array [
          "Bidule",
        ],
      },
      "negate": false,
      "operator": "AND",
    },
    Object {
      "conditions": Array [],
      "filter": Object {
        "fields": Array [
          "part.content",
        ],
        "operator": "CONTAINS",
        "values": Array [
          "un gros mot",
        ],
      },
      "negate": true,
      "operator": "AND",
    },
  ],
  "deferred": false,
  "name": "MyFilter",
  "stop": true,
  "trigger": "IN",
  "type": "GENERIC",
}
`;
